# cursor-usage

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/cursor_usage/: __init__.py  __main__.py  aggregator.py  cli.py  formatter.py  models.py  parser.py  renderer.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_cli.py
tests/unit/: test_aggregator.py  test_formatter.py  test_models.py  test_parser.py  test_renderer.py
