[project]
name = "cursor-usage-analysis"
version = "0.1.0"
description = "CLI tool to analyze Cursor IDE usage statistics"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9.0",
]

[project.scripts]
cursor-usage = "cursor_usage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_usage"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cursor_usage"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cursor_usage"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
